--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,45 @@
   </head>
 
   <body>
-  	<%= link_to "Home", root_path %>
-  	<%= link_to "Athletes Den", root_path %>
-    <%= yield %>
+    <header role="banner">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <%= link_to "Home", root_path, class: "navbar-brand" %>
+            <%= link_to "Athletes Den", root_path %>        
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><%= link_to "Authors", "#" %></li>
+              <% if user_signed_in? %>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+                <p class="navbar-text">
+                  Signed in as <%= "#{current_user.email}" %>
+                </p>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+              <% end %>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </header>
+    <div class="row">
+      <div class="col-md-12">
+        <% flash.each do |key, message| %>
+          <div class="text-center alert alert-<%= key == 'notice' ? 'success' : 'danger' %>">
+            <%= message %>
+          </div>
+        <% end %>
+      </div>
+      <%= yield %>
+    </div>
   </body>
 </html>
