--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><%= link_to "Authors", "#" %></li>
               <% if user_signed_in? %>
+                <li><%= link_to "My Lounge", user_exercises_path(current_user) %></li>
                 <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
                 <p class="navbar-text">
                   Signed in as <%= "#{current_user.email}" %>
