--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -31,4 +31,6 @@
 		</div>
 	<% end %>
 	<%= link_to "New Workout", new_user_exercise_path(current_user), class: "btn btn-success" %>
+
+	<%= content_tag :div, '', id: "chart", data: { workouts: @exercises } %>
 </div>
