--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,14 @@
               <span class="icon-bar"></span>
             </button>
             <%= link_to "Home", root_path, class: "navbar-brand" %>
-            <%= link_to "Athletes Den", root_path %>        
+            <%= link_to "Athletes Den", root_path %>
+
+            <%= form_tag(search_dashboards_path, class: "navbar-form navbar-left", role: "search") do %>
+              <div class="form-group">
+                <%= text_field_tag :search_name, nil, placeholder: "Search for friends", class: "form-control" %>
+              </div>
+              <%= submit_tag "Search", class: "btn btn-default" %>
+            <% end %>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
